# xbox-live-samples

./: .gitignore  .gitmodules  LICENSE.md  README.md
ID@XboxSDK/Achievements/Xbox/: Achievements.cpp  Achievements.h  Achievements.sln  Achievements.vcxproj  Achievements.vcxproj.filters  Achievements_Readme_ja-jp.docx  Achievements_Readme_ko-kr.docx  Achievements_Readme_zh-cn.docx  Main.cpp  Package.appxmanifest  Readme.docx  Readme.md  StatsSample.h  pch.h
ID@XboxSDK/DownloadableContent/Xbox/: DeviceResources.cpp  DownloadableContent.cpp  DownloadableContent.h  DownloadableContent.sln  DownloadableContent.vcxproj  DownloadableContent.vcxproj.filters  DownloadableContent_Readme_ja-jp.docx  DownloadableContent_Readme_ko-kr.docx  DownloadableContent_Readme_zh-cn.docx  ListView.h  Main.cpp  Package.appxmanifest  Readme.docx  Readme.md  UIConstants.h  UITwist.cpp  UITwist.h  pch.h
ID@XboxSDK/GameSave/UWP/: GameSaveUWP.sln  Readme.docx  Readme.md
ID@XboxSDK/GameSave/Unity/: Readme.md
ID@XboxSDK/GameSave/Xbox/: AssetLink.xml  GameSaveXDK.sln  GameSave_Readme_ja-jp.docx  GameSave_Readme_ko-kr.docx  GameSave_Readme_zh-cn.docx  Readme.md  SampleGame.cpp  SampleGame.h  pch.h
ID@XboxSDK/GameSaveCppWinRT/Xbox/: AssetLink.targets  GameSaveCppWinRT_Readme_ja-jp.docx  GameSaveCppWinRT_Readme_ko-kr.docx  GameSaveCppWinRT_Readme_zh-cn.docx  GameSaveXDK.sln  Readme.docx  Readme.md  SampleGame.cpp  SampleGame.h  pch.h
ID@XboxSDK/GameTrials/Xbox/: DeviceResources.cpp  GameTrials.cpp  GameTrials.h  GameTrials.sln  GameTrials.vcxproj  GameTrials.vcxproj.filters  GameTrials_ReadMe_ja-jp.docx  GameTrials_ReadMe_ko-kr.docx  GameTrials_ReadMe_zh-cn.docx  Main.cpp  Package.appxmanifest  ReadMe.docx  Readme.md  debug_licensing_overrides.xml  pch.h
ID@XboxSDK/InGameChat/UWP/: ChatIntegrationLayer.cpp  ChatIntegrationLayer.h  InGameChatUWP.cpp  InGameChatUWP.h  InGameChatUWP.sln  InGameChatUWP.vcxproj  ItemRepeater.h  Main.cpp  Readme.md  UserRepeater.cpp  WrapBuffer.h  networkmanifest.xml  packages.config  pch.h  xboxservices.config
ID@XboxSDK/InGameChat/Xbox/: ChatIntegrationLayer.cpp  ChatIntegrationLayer.h  InGameChat.cpp  InGameChat.h  InGameChat.sln  InGameChat.vcxproj  InGameChat.vcxproj.filters  InGameChat_ReadMe_ja-jp.docx  InGameChat_ReadMe_ko-kr.docx  InGameChat_ReadMe_zh-cn.docx  ItemRepeater.h  Main.cpp  Package.appxmanifest  ReadMe.docx  Readme.md  UserRepeater.cpp  pch.h
ID@XboxSDK/InGameChatUWP/UWP/: InGameChatUWP.vcxproj.filters  Package.appxmanifest  ReadMe.docx  UserRepeater.h
ID@XboxSDK/Leaderboards/Xbox/: Leaderboards.cpp  Leaderboards.h  Leaderboards.sln  Leaderboards.vcxproj  Leaderboards.vcxproj.filters  Leaderboards_Readme_ja-jp.docx  Leaderboards_Readme_ko-kr.docx  Leaderboards_Readme_zh-cn.docx  Main.cpp  Package.appxmanifest  Readme.docx  Readme.md
ID@XboxSDK/PositionalChat/Xbox/: AudioCBuffer.cpp  AudioCBuffer.h  ChatIntegrationLayer.cpp  ChatIntegrationLayer.h  GameAudio.cpp  GameAudio.h  Main.cpp  Package.appxmanifest  PositionalChat.cpp  PositionalChat.h  PositionalChat.sln  PositionalChat.vcxproj  PositionalChat.vcxproj.filters  PositionalChat_ReadMe_ja-jp.docx  PositionalChat_ReadMe_ko-kr.docx  PositionalChat_ReadMe_zh-cn.docx  ReadMe.docx  Readme.md  UserRepeater.cpp  UserRepeater.h  pch.h
ID@XboxSDK/Social/Unity/: Readme.md
ID@XboxSDK/Social/Xbox/: Main.cpp  ReadMe.docx  Readme.md  Social.cpp  Social.vcxproj  Social.vcxproj.filters  pch.h  (+5 more)
Kits/ATGTK/: SampleGUI.cpp  SampleGUI.h
Kits/LiveTK/: LiveInfoHUD.cpp  LiveInfoHUD.h  LiveResourcesCppWinRT_XDK.cpp  LiveResourcesCppWinRT_XDK.h  LiveResourcesUWP.cpp  LiveResourcesUWP.h  LiveResourcesXDK.h
Kits/Microsoft.Xbox.Samples.NetworkMesh/: Microsoft.Xbox.Samples.NetworkMesh.UWP.vcxproj  Microsoft.Xbox.Samples.NetworkMesh.vcxproj
MobileSDK/Integration/: Achievements_Integration.cpp  Achievements_Integration.h  Adv_Identity_Integration.cpp  Adv_Identity_Integration.h  Identity_Integration.cpp  Identity_Integration.h  Social_Integration.cpp  Social_Integration.h  XAsync_Integration.cpp  XAsync_Integration.h  XSAPI_Integration.cpp  XSAPI_Integration.h
MobileSDK/Samples-Cocos2d-x/: CMakeLists.txt  README.md
MobileSDK/Samples-Cocos2d-x/Classes/: AppDelegate.cpp  AppDelegate.h  ScreenLog.cpp  ScreenLog.h
MobileSDK/Samples-Cocos2d-x/Gameplay/: Achievements_Gameplay.cpp  Identity_Gameplay.cpp
MobileSDK/Samples-Cocos2d-x/Sample-Android/: build.gradle  gradle.properties  settings.gradle
MobileSDK/Samples-Cocos2d-x/Sample-Android/app/: AndroidManifest.xml  build.gradle
MobileSDK/Samples-Cocos2d-x/Sample-Android/app/jni/: Game_Integration.cpp  Game_Integration.h  main.cpp  pch.h
MobileSDK/Samples-Cocos2d-x/Sample-Android/app/src/org/cocos2dx/Sample/: AppActivity.java
MobileSDK/Samples-Cocos2d-x/Sample-Android/gradle/wrapper/: gradle-wrapper.properties
MobileSDK/Samples-Cocos2d-x/Sample-iOS_Mac/: Sample-mobile.entitlements
MobileSDK/Samples-Cocos2d-x/Sample-iOS_Mac/Sample.xcodeproj/: project.pbxproj
MobileSDK/Samples-Cocos2d-x/Sample-iOS_Mac/Sample.xcodeproj/xcshareddata/xcschemes/: Sample-mobile.xcscheme
MobileSDK/Samples-Cocos2d-x/Sample-iOS_Mac/ios/: AppController.mm  Game_Integration.cpp  Game_Integration.h  Info.plist  LaunchScreen.storyboard  pch.h
MobileSDK/Samples-Cocos2d-x/Scenes/: AchievementsLayer.cpp  AchievementsLayer.h  GameScene.cpp  GameScene.h  HubLayer.cpp  HubLayer.h  IdentityLayer.cpp  IdentityLayer.h
MobileSDK/Samples-Native/Sample-Android/app/src/main/cpp/: CMakeLists.txt  Game_Integration.cpp  Game_Integration.h  SampleLog.cpp  SampleLog.h  pch.h
MobileSDK/Samples-Native/Sample-Android/app/src/main/cpp/Gameplay/: Achievements_Gameplay.cpp  Identity_Gameplay.cpp
MobileSDK/Samples-Native/Sample-Android/app/src/main/cpp/jni/: AchievementsLayer_JNI.cpp  AchievementsLayer_JNI.h  ConsoleView_JNI.cpp  ConsoleView_JNI.h  Game_Integration_JNI.cpp  Game_Integration_JNI.h  IdentityLayer_JNI.cpp  IdentityLayer_JNI.h  MenuView_JNI.cpp  MenuView_JNI.h
MobileSDK/XboxLiveSDK/: README.md
Utilities/: SwitchNugetVersion.cmd
Utilities/VSOBuildScripts/: postBuildScript.cmd
(+732 files in other folders)
